@@ -36,6 +36,7 @@
       },
       "runtime" : {
          "requires" : {
+            "IO::Handle::Util" : "0.01",
             "Moo" : "1.0",
             "perl" : "v5.10.0"
          }
@@ -53,7 +54,7 @@
          "web" : "https://github.com/nichtich/Text-MarkdownTable"
       }
    },
-   "version" : "0.2.1",
+   "version" : "0.2.2",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
