@@ -1,2 +1,3 @@
 requires perl => '5.10.0';
 requires Moo => '1.0';
+requires 'IO::Handle::Util' => '0.01';
